Commit compras info
Commit compras info

--- a/assets/styles/html.css
+++ b/assets/styles/html.css
@@ -9,6 +9,7 @@
 .carrousel__slider {
     display: flex;
     transition: transform 0.5s ease;
+    position: relative;
 }
 
 .carrousel__slide {
@@ -18,4 +19,49 @@
 .carrousel__image {
     width: 100%;
     height: auto;
+}
+
+#prevBtn,
+#nextBtn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#prevBtn {
+    left: 0;
+}
+
+#nextBtn {
+    right: 0;
+}
+
+/* info productos envios */
+
+.compras-info__items {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.compras-info__item {
+    font-size: 20px;
+    overflow: hidden;
+    text-align: center;
+    height: auto;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 8px;
+    margin: 20px;
+}
+
+.compras__item-icono {
+    font-size: 25px;
 }
