--- a/assets/styles/html.css
+++ b/assets/styles/html.css
@@ -41,14 +41,6 @@
 }
 
 /* info productos envios */
-body {
-    background-color: #F1F2EB;
-}
-
-.compras-info {
-    background-color: #F1F2EB;
-
-}
 
 .compras-info__items {
     display: flex;
@@ -153,7 +145,7 @@ body {
     letter-spacing: 2px;
     color: #fff;
     background-color: transparent;
-    background-image: linear-gradient(180deg, #FF5F5F 0%, #ff8471 100%);
+    background-image: linear-gradient(180deg, #FF5F5F 0%, #F07423 100%);
     border-style: solid;
     border-width: 0px 0px 0px 0px;
     border-radius: 30px;
@@ -177,10 +169,20 @@ body {
 .producto-titulo a {
     color: #000000;
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
     text-decoration: none;
-    padding: 8px 16px;
+    padding: 16px;
     font-weight: 400;
+
 }
 
-#producto-1 {}
+/* footer */
+
+footer {
+    position: relative;
+
+}
+
+.footer-container {
+    bottom: 0;
+}
