--- a/assets/styles/html.css
+++ b/assets/styles/html.css
@@ -42,6 +42,10 @@
 
 /* info productos envios */
 
+.compras-info {
+    background-color: #FFFFF9;
+}
+
 .compras-info__items {
     display: flex;
     align-items: center;
@@ -70,7 +74,7 @@
 /* lista de productos */
 
 .todos-los-productos {
-    margin-top: 100px;
+    margin-top: 30px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -79,6 +83,7 @@
 }
 
 .producto {
+    padding-top: 20px !important;
     overflow: hidden;
     text-align: center;
     width: 325px;
@@ -171,7 +176,7 @@
     text-align: center;
     font-size: 25px;
     text-decoration: none;
-    padding: 16px;
+    padding-bottom: 25px;
     font-weight: 400;
 
 }
