--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -15,7 +15,7 @@
   padding: 0;
 }
 
-[data-bs-theme=light]{
+[data-bs-theme=light] {
   --bs-body-bg: #f5fff1;
   /* --bs-body-bg: var(--bs-warning); */
 
@@ -55,4 +55,33 @@
       border-bottom: 3px solid var(--accent-100);
     }
   }
+}
+
+
+/* boton Ir arriba */
+.btnScrollUp {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  background-color: #F07423;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 9999;
+}
+
+/* footer */
+
+footer {
+  position: relative;
+
+}
+
+.footer-container {
+  bottom: 0;
 }
