--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -77,11 +77,10 @@
 
 /* footer */
 
-footer {
+#footer {
   position: relative;
-
-}
-
-.footer-container {
   bottom: 0;
+  width: 100%;
+  margin: 0 auto !important;
+  padding: 0 !important;
 }
