--- a/assets/styles/html.css
+++ b/assets/styles/html.css
@@ -43,7 +43,8 @@
 /* info productos envios */
 
 .compras-info {
-    background-color: #FFFFF9;
+    background-color: var(--bs-light-bg-subtle);
+    border-color: var(--bs-primary-rgb);
 }
 
 .compras-info__items {
@@ -96,7 +97,8 @@
     border-radius: 8px;
     margin: 20px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    background-color: #FFFFF9;
+    background-color: var(--bs-light-bg-subtle);
+
 }
 
 .producto-info {
@@ -109,7 +111,6 @@
 }
 
 .producto-info p {
-    color: #666;
     font-size: 15px;
     line-height: 1.3;
 }
@@ -172,11 +173,14 @@
 
 .producto-titulo,
 .producto-titulo a {
-    color: #000000;
     text-align: center;
     font-size: 25px;
     text-decoration: none;
     padding-bottom: 25px;
     font-weight: 400;
+    color: var(--bs-secondary-color);
+}
 
+.btnArriba {
+    color: white !important;
 }
