--- a/assets/styles/html.css
+++ b/assets/styles/html.css
@@ -26,7 +26,8 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: var(--bs-secondary-bg);
+    color: var(--bs-primary-bg);
     border: none;
     padding: 10px;
     cursor: pointer;
