--- a/assets/styles/login.css
+++ b/assets/styles/login.css
@@ -6,12 +6,16 @@ main {
     min-height: 100vh;
 }
 
-.form-contenedor {
+.form-contenedor-externo {
     text-align: center;
     box-shadow: 0.5;
     justify-content: center !important;
     display: flex;
     width: 500px;
+    background-color: var(--bs-tertiary-bg);
+    border-radius: 20px;
+    margin-top: 1rem;
+    box-shadow: var(--bs-box-shadow-sm);
 
     & .banner {
         width: 100%;
@@ -48,15 +52,21 @@ form {
     width: 400px;
 }
 
-.form-contenedor h1 {
+.form-contenedor-externo h2 {
     font-size: 37px;
     text-align: center;
+    margin-top: 3rem;
 }
 
-.form-contenedor .formu-input {
+.form-contenedor-externo .formu-input {
     width: 100%;
     height: 50px;
     margin: 30px 0;
+
+}
+
+.form-contenedor-interno {
+    padding-top: 2.3rem;
 }
 
 .formu-input {
