--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -75,12 +75,10 @@
   z-index: 9999;
 }
 
-/* footer */
-
-#footer {
+footer {
   position: relative;
   bottom: 0;
   width: 100%;
-  margin: 0 auto !important;
+  margin: 0 !important;
   padding: 0 !important;
 }
