commit js login
commit js login

--- a/assets/styles/login.css
+++ b/assets/styles/login.css
@@ -99,7 +99,7 @@ form {
     margin: 2rem;
 }
 
-.form-button {
+.login-button {
     cursor: pointer;
     border-radius: 20px;
     font-size: 1.2rem;
