--- a/assets/styles/productos.css
+++ b/assets/styles/productos.css
@@ -47,7 +47,7 @@
 
     & #cards {
       & .card {
-        height: 480px;
+        height: 500px;
         width: 100%;
         & .card-title {
           font-size: 1.2rem;
@@ -62,6 +62,17 @@
         & a {
           font-weight: 600;
         }
+
+        & .card-footer{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          
+          & p {
+            flex: auto;
+            margin: auto; 
+          }
+        }
       }
     }
   }
@@ -72,7 +83,7 @@
   }
 }
 
-@media (width <= 320px) {
+@media (width <=425px) {
   .productos {
     & main {
       & #cards {
@@ -84,7 +95,7 @@
   }
 }
 
-@media (320px < width <= 768px) {
+@media (425px < width <= 768px) {
   .productos {
     & main {
       & #cards {
@@ -118,4 +129,10 @@
       }
     }
   }
+}
+
+
+.cart-img{
+  width: 50px;
+  height: 50px;
 }
