--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -4,17 +4,14 @@ body {
     min-height: 100vh;
 }
 
-footer {
-    margin-top: auto;
-}
-
 .contacto {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
-    margin: 10px;
+    margin: 20px;
+    margin-bottom: 130px;
     position: relative;
-    top: 100px
+    
 }
 
 .iframe {
@@ -26,6 +23,10 @@ footer {
     margin: 10px;
 }
 
+form h2{
+    margin-left: 5px
+}
+
 input {
     width: 100%;
     padding: 10px;
@@ -33,7 +34,7 @@ input {
     border-radius: 10px;
 }
 
-input[type="radio"] {
+input[type="checkbox"] {
     width: auto;
 }
 
@@ -59,10 +60,14 @@ textarea {
 
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    /* -khtml-user-select: none; */
+    -khtml-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+footer {
+    margin-top: auto;
 }
 
 
