--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -14,6 +14,11 @@ body {
     
 }
 
+div iframe{
+    width: 100%;
+    height: 600px;
+}
+
 .iframe {
     grid-column: 1fr;
 }
@@ -64,6 +69,10 @@ textarea {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+#refreshcaptcha:hover{
+    cursor: pointer;
 }
 
 footer {
