--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,6 +2,7 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css);
 @import url(./theme.css);
 @import url(./productos.css);
+@import url(./detalles.css);
 
 :root {
   --accent-100: #ff4d4d;
